stop ticket pricing from wrappingn on extreme small widths

--- a/assets/css/scss/_front-page--tickets.scss
+++ b/assets/css/scss/_front-page--tickets.scss
@@ -130,6 +130,7 @@
                     font-size: 5.5em;
                     font-weight: 300;
                     text-align: center;
+                    white-space: nowrap;
                 }
 
 
