--- a/style.css
+++ b/style.css
@@ -2335,6 +2335,7 @@ body:not(.home) .nav-main a {
   font-size: 5.5em;
   font-weight: 300;
   text-align: center;
+  white-space: nowrap;
 }
 
 @media only screen and (min-width: 30.5em) {
